# rustmail

./: Cargo.toml  LICENSE  README.md
examples/: README.md  config.enterprise.json  config.icloud.json  config.multi-account.json  config.sample.json
src/: app.rs  main.rs
src/mail/: account.rs  client.rs  gmail_api.rs  imap_client.rs  message.rs  mod.rs  oauth.rs  smtp_client.rs
src/search/: mod.rs
src/storage/: config.rs  database.rs  mod.rs
src/ui/: compose.rs  mail_list.rs  mail_view.rs  mod.rs  widgets.rs
src/utils/: mod.rs
