[package]
name = "rustmail"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUIフレームワーク
ratatui = "0.26"
crossterm = "0.27"

# メールプロトコル
lettre = "0.11"  # SMTP
imap = "3.0.0-alpha.15"     # IMAP
native-tls = "0.2"

# データ保存
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }

# 非同期処理
tokio = { version = "1", features = ["full"] }

# その他
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
uuid = { version = "1.0", features = ["v4"] }
